--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>List of Owners</title>
 </head>
 <body>
 <h2 th:text="'List of owners'">Owners Page</h2>
